--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,17 @@
     <mat-tab label="Add New Customer"> <br><app-customer-card></app-customer-card></mat-tab>
   </mat-tab-group> -->
 
-
+<div *ngIf="authorized">
 <nav>
-    <ul clas="nav nav-tabs">
-         <li><a routerLink="/homePage" routerLinkActive="active">Home Page</a></li>
+    <ul clas="nav nav-tabs" >
+         <li ><a routerLink="/homePage" routerLinkActive="active">Home Page</a></li>
         <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
         <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li> 
        <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
        <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
     </ul>
 </nav> 
+</div>
  <!-- <app-admin></app-admin>
 <app-customer></app-customer>
 <app-update-customer></app-update-customer> -->
