--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
 <div *ngIf="authorized">
 <nav>
     <ul clas="nav nav-tabs" >
-         <li ><a routerLink="/homePage" routerLinkActive="active">Home Page</a></li>
+         <li ><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
         <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
-        <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li> 
+        <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
        <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
        <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
     </ul>
