--- a/src/app/modules/customer/customer-card/customer-card.component.html
+++ b/src/app/modules/customer/customer-card/customer-card.component.html
@@ -126,7 +126,11 @@
         
                 </div>
               
-                
+                <div class="example-button-container">
+                    <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                </div>
          </div>
         </div>
     </div>
