--- a/src/app/modules/customer/customer-card/customer-card.component.html
+++ b/src/app/modules/customer/customer-card/customer-card.component.html
@@ -121,8 +121,8 @@
                 <div class="pull-right">
                     <a  class="btn btn-success btn-lg" id="btnSubmit" (click)="saveCustomer()"><i class="fa fa-save" ></i> Save</a>
                     <a  class="btn btn-warning btn-lg" id="btnSubmit" (click)="onEditClickecd()"><i class="fa fa-edit"></i> Edit</a>
- 
                     <a class="btn btn-warning btn-lg" href="#" id="btnToTop"><i class="fa fa-arrow-up"></i> Top</a>
+                    <button (click)="deleteCustomer()">delete</button>
         
                 </div>
               
