--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -85,4 +85,21 @@
 
 
 
+
+
+<!-- to chanchy;) -->
+
+<!-- <ng-container matColumnDef="actions">
+  <mat-header-cell *matHeaderCellDef>Actions </mat-header-cell>
+  <mat-cell *matCellDef="let row">
+    <button mat-icon-button matTooltip="Click to Edit" class="iconbutton" color="primary">
+        <mat-icon aria-label="Edit">edit</mat-icon>
+      </button>
+    <button mat-icon-button matTooltip="Click to Delete" class="iconbutton" color="warn">
+        <mat-icon aria-label="Delete">delete</mat-icon>
+      </button>
+  </mat-cell>
+</ng-container> -->
+
+
  
