--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,18 +4,18 @@
     <mat-tab label="Customers"> <app-customer-list></app-customer-list> </mat-tab>
     <mat-tab label="Add New Customer"> <br><app-customer-card></app-customer-card></mat-tab>
   </mat-tab-group> -->
-<!-- <div *ngIf="authorized">
+<div *ngIf="authorized">
     <nav>
         <ul class="nav nav-tabs" >
              <li ><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
             <li><a routerLink="/login" routerLinkActive="active">Login</a></li> 
-             <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
-          <!-- <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
+             <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li> 
+          <!-- <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>-->
            <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
            <li><a routerLink="/calendar" routerLinkActive="active">Calendar</a></li>
         </ul>
     </nav> 
-    </div>  -->
+    </div> 
      <!-- <app-admin></app-admin>
     <app-customer></app-customer>
     <app-update-customer></app-update-customer> -->
@@ -23,13 +23,13 @@
 
 
 
- <!DOCTYPE html>
+ <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
  <title>Document</title>
 </head>
-<body>
+<body> -->
   <!-- <div class="px-3 py-2 bg-dark text-white">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -79,13 +79,13 @@
       </div>
     </div>
   </div>  -->
-    <div class="tabs" *ngIf="authorized">
+    <!-- <div class="tabs" *ngIf="authorized">
       <div *ngIf="authorized">
         <nav>
             <ul class="nav nav-tabs" >
                  <li ><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
                 <li><a routerLink="/login" routerLinkActive="active">Login</a></li> 
-                <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
+                <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  
               <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
                <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
                <li><a routerLink="/calendar" routerLinkActive="active">Calendar</a></li>
@@ -95,12 +95,12 @@
     </div> 
        <router-outlet></router-outlet>
 </body>
-</html> 
+</html>  -->
 
 <!-- <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+     Required meta tags -->
     <!-- <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
@@ -125,4 +125,3 @@
   <!-- </body>
 </html> -->
 
- -->
