--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,32 +4,30 @@
     <mat-tab label="Customers"> <app-customer-list></app-customer-list> </mat-tab>
     <mat-tab label="Add New Customer"> <br><app-customer-card></app-customer-card></mat-tab>
   </mat-tab-group> -->
-<!-- <div *ngIf="authorized">
+<div *ngIf="authorized">
     <nav>
         <ul class="nav nav-tabs" >
              <li ><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
-            <li><a routerLink="/login" routerLinkActive="active">Login</a></li> 
-             <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
-          <!-- <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
+            <!-- <li><a routerLink="/login" routerLinkActive="active">Login</a></li>  -->
+             <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
+         <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
            <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
            <li><a routerLink="/calendar" routerLinkActive="active">Calendar</a></li>
         </ul>
     </nav> 
-    </div>  -->
-     <!-- <app-admin></app-admin>
-    <app-customer></app-customer>
-    <app-update-customer></app-update-customer> -->
+    </div> 
+     <!-- <app-admin></app-admin> -->
     <router-outlet></router-outlet>
 
 
-
+<!-- 
  <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
- <title>Document</title>
+<head> -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+ <!-- <title>Document</title>
 </head>
-<body>
+<body> -->
   <!-- <div class="px-3 py-2 bg-dark text-white">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -78,15 +76,15 @@
         </ul>
       </div>
     </div>
-  </div>  -->
+  <!-- </div>  
     <div class="tabs" *ngIf="authorized">
       <div *ngIf="authorized">
         <nav>
             <ul class="nav nav-tabs" >
                  <li ><a routerLink="/homePage" routerLinkActive="active"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></a></li>
-                <li><a routerLink="/login" routerLinkActive="active">Login</a></li> 
+                <li><a routerLink="/login" routerLinkActive="active">Login</a></li>  -->
                 <!-- <li><a routerLink="/newCustomer" routerLinkActive="active">New Customer</a></li>  -->
-              <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
+              <!-- <li><a routerLink="/customer" routerLinkActive="active">Customers</a></li>
                <li><a routerLink="/customer/NewCustomer" routerLinkActive="active">New Customer</a></li>
                <li><a routerLink="/calendar" routerLinkActive="active">Calendar</a></li>
             </ul>
@@ -95,34 +93,7 @@
     </div> 
        <router-outlet></router-outlet>
 </body>
-</html> 
+</html>  -->
 
-<!-- <!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <!-- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
-    <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1> -->
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  <!-- </body>
-</html> -->
-
- -->
+    
