--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,14 +37,17 @@
      <!-- <app-admin></app-admin> -->
     <router-outlet></router-outlet>
 
-
+    <!DOCTYPE html>
+    <html lang="en">
+    <head> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  </head>
+    </html>
 <!-- 
- <!DOCTYPE html>
-<html lang="en">
-<head> -->
+
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
  <!-- <title>Document</title>
-</head>
+
 <body> -->
   <!-- <div class="px-3 py-2 bg-dark text-white">
     <div class="container">
