--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -62,11 +62,11 @@ ul {
   }
   
   li a:hover:not(.active) {
-    background-color: #111;
+    background-color:  #000;
   }
   
   .active {
-    background-color: #04AA6D;
+    background-color:#FC9616;;
   }
 
  
