--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -1,9 +1,121 @@
-
+ 
+  <div class="title">
+    <svg xmlns="http://www.w3.org/2000/svg" width="80" height="70" fill="currentColor" class="bi bi-calendar-event" viewBox="0 0 16 16">
+        <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
+        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+      </svg>
+      <h1>הזמנות</h1>
+    </div>
 
 <div dir="rtl" >
     <form [formGroup]="orderForm" class="example-form">
-    <div class="form-card">
-    <div class="title">
+  <div class="form-card">
+
+<div dir="ltr">
+    <mat-form-field appearance="fill" class="example-form-field">
+      <mat-label>Enter a date range</mat-label>
+      <mat-date-range-input [rangePicker]="rangePicker">
+        <input matStartDate formControlName="checKInDate" placeholder="Start date" >
+        <input matEndDate formControlName="checkOutDate" placeholder="End date">
+      </mat-date-range-input>
+      <mat-datepicker-toggle matSuffix [for]="rangePicker"></mat-datepicker-toggle>
+      <mat-date-range-picker #rangePicker>
+        <mat-date-range-picker-actions>
+          <button mat-button matDateRangePickerCancel>Cancel</button>
+          <button mat-raised-button color="primary" matDateRangePickerApply>Apply</button>
+        </mat-date-range-picker-actions>
+      </mat-date-range-picker>
+    </mat-form-field>
+  </div>    
+
+    <!-- <mat-form-field appearance="fill">
+      <mat-label>Check In Date</mat-label>
+      <input matInput [matDatepicker]="picker1" placeholder="Check In Date" formControlName="checkInDate">
+      <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+      <mat-datepicker #picker1></mat-datepicker>
+    </mat-form-field> 
+
+    <mat-form-field appearance="fill">
+      <mat-label>Check Out Date</mat-label>
+      <input matInput [matDatepicker]="picker2" placeholder="Check Out Date" formControlName="checkOutDate">
+      <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+      <mat-datepicker #picker2></mat-datepicker>
+    </mat-form-field> -->
+
+    <br>
+    <mat-form-field appearance="fill">
+      <mat-label>Booking Date</mat-label>
+      <input matInput [matDatepicker]="picker3" placeholder="Booking Date" formControlName="bookingDate">
+      <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
+      <mat-datepicker #picker3></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>First name</mat-label>
+      <input matInput formControlName="customerName">
+    </mat-form-field>
+    <!-- <br>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>First name</mat-label>
+      <input matInput>
+    </mat-form-field> -->
+    <br>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Total Price</mat-label>
+      <input matInput type="number"  formControlName="totalPrice">
+    </mat-form-field>
+    <br>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Cost Price</mat-label>
+      <input matInput type="number"  formControlName="costPrice">
+    </mat-form-field>
+    <br>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Hotel Name</mat-label>
+      <input matInput formControlName="hotelName">
+    </mat-form-field>
+    <br>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Comments</mat-label>
+      <input matInput formControlName="comments">
+    </mat-form-field>
+
+    <mat-checkbox ngDefaultControl  formControlName="separteBeds">מיטות נפרדות</mat-checkbox>
+    <br>
+    <mat-checkbox ngDefaultControl formControlName="multipleRooms">חדרים כפולים</mat-checkbox>
+    <br>
+    <h4>
+    <mat-form-field appearance="fill" class="num-of-people" >
+      <input matInput type="number" formControlName="numOfAdults">
+    </mat-form-field>
+    מס' מבוגרים</h4>
+    <br>
+    <h4>
+    <mat-form-field appearance="fill" class="num-of-people" >
+      <input matInput type="number" formControlName="statusCode">
+    </mat-form-field>
+  סטטוס קוד</h4>
+    <br>
+    <h4>
+    <mat-form-field appearance="fill" class="num-of-people" >
+      <input matInput type="number" formControlName="hotelId">
+    </mat-form-field>
+    מס' מלון</h4>
+    <br>
+    <h4>
+    <mat-form-field appearance="fill" class="num-of-people" >
+      <input matInput type="number" formControlName="hotelPrice">
+    </mat-form-field>
+  מחיר המלון</h4>
+    <br>
+    
+<button mat-stroked-button class="btn"  (click)="saveOrder()"> שמירת לקוח</button>
+<br>
+<button mat-stroked-button class="btn"  (click)="getOrderDetails()"> פרטי לקוח</button>
+  </div> 
+</form>
+</div>
+    <!--  <div class="title">
       <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-calendar-event" viewBox="0 0 16 16">
         <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
         <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
@@ -24,7 +136,7 @@
         <input matInput [matDatepicker]="picker1" placeholder="Check In Date">
         <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
         <mat-datepicker #picker1></mat-datepicker>
-      </mat-form-field>
+      </mat-form-field> -->
 
       <!-- <mat-form-field>
         <input matInput [matDatepicker]="picker1">
@@ -33,7 +145,7 @@
       </mat-form-field>
       -->
 
-    </p>
+    <!-- </p>
     <p>
       <mat-form-field appearance="fill"> 
         <mat-label>Check Out Date</mat-label>
@@ -71,7 +183,7 @@
             <input matInput formControlName="hotelName">
           </mat-form-field>          
       </p>
-      <!-- <p> -->
+      <p> -->
      <!-- <table>
             <tr>
                 <td>
@@ -135,19 +247,10 @@
         <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z"/>
       </svg> Delete</button>-->
     <!-- </div> -->
-    </div> 
-</form>
-</div>
-
+  
+    
 
 <hr style="width:100% ;">
 
-  <div class="title">
-    <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" fill="currentColor" class="bi bi-calendar-event" viewBox="0 0 16 16">
-        <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
-        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
-      </svg>
-      <h1>הזמנות</h1>
-    </div>
 
 
