--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -9,11 +9,12 @@
     <mat-form-field  appearance="fill">
       <mat-label>הכנס את שם הלקוח</mat-label>
       <input type="text"
+      id="filterField"
              placeholder="שם מלא"
              matInput
              [formControl]="myControl"
              [matAutocomplete]="auto"  #name>
-      <mat-autocomplete #auto="matAutocomplete">
+      <mat-autocomplete #auto="matAutocomplete" >
         <mat-select [formControl]="myControl">
         <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
           {{option}}
@@ -21,7 +22,8 @@
       </mat-select>
       </mat-autocomplete>
     </mat-form-field>
-    <!-- <button (click)="findCustomer(name.value)">חיפוש</button> -->
+    <button (click)="findCustomer(name.value)">חיפוש</button>
+    <button (click)="clear()">נקה שדות חיפוש</button>
   </form>
 </body>
 </html>
