--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -10,10 +10,26 @@
           </div>
     <form [formGroup]="orderForm">
 
-  <mat-form-field class="name-filed" appearance="fill">
+      <!-- formControlName="customerName" -->
+      <mat-form-field  class="name-filed" appearance="fill">
+        <mat-label><mat-icon>person</mat-icon> שם לקוח</mat-label>
+        <input type="text"
+            placeholder="שם לקוח"
+               matInput
+               [formControl]="myControl"
+               [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete" >
+          <mat-select [formControl]="myControl">
+          <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+            {{option}}
+          </mat-option>
+        </mat-select>
+        </mat-autocomplete>
+      </mat-form-field>
+  <!-- <mat-form-field class="name-filed" appearance="fill">
     <mat-label><mat-icon>person</mat-icon> שם מלא של הלקוח</mat-label>
     <input matInput formControlName="customerName">
-  </mat-form-field>
+  </mat-form-field> -->
   <mat-form-field appearance="fill" class="dates">
   <mat-label>תאריכים</mat-label>
   <mat-date-range-input [rangePicker]="rangePicker">
