--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 
 
-    <!-- <div *ngIf="_authorized"> -->
+    <div *ngIf="_authorized">
      <app-menu class="nav"></app-menu>
      <div class="router">
       <router-outlet></router-outlet>
     </div> 
-  <!-- </div> -->
-  <!-- <div *ngIf="!_authorized"> -->
-    <!-- <router-outlet></router-outlet> -->
-<!-- </div> -->
+  </div>
+  <div *ngIf="!_authorized">
+    <router-outlet></router-outlet>
+</div>
