--- a/src/app/modules/Admin/admin/admin.component.css
+++ b/src/app/modules/Admin/admin/admin.component.css
@@ -8,7 +8,7 @@ html {
   body {
     font-family: "Poppins", sans-serif;
     height: 100vh;
-    background-image: url('src/imgs/inside.jpg');
+    background-image: url('src/imgs/living-beach.jpg');
     background-size: cover;
     position: auto;
     width: 100%;
